--- a/biome.json
+++ b/biome.json
@@ -12,7 +12,8 @@
   },
   "javascript": {
     "formatter": {
-      "quoteStyle": "single"
+      "quoteStyle": "single",
+      "semicolons": "asNeeded"
     }
   },
   "linter": {
