--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   "dependencies": {
     "@slack/bolt": "^3.22.0",
     "dotenv": "~16.4.5",
+    "pino": "^9.5.0",
+    "pino-pretty": "^11.3.0",
+    "ts-pattern": "^5.5.0",
     "yargs": "^17.7.2",
     "zod": "^3.23.8"
   },
